tests/miniJava/neg/005594_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java String extends java { }
